feat(styles): changing styles in the portfolio

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -28,3 +28,12 @@
     max-width: 100%; 
     margin: 0 auto;
 }
+
+.email-link {
+    text-decoration: none;
+    color: white;
+}
+
+.email-link:hover {
+    color: #FDE12D;
+}
