--- a/src/pages/resume/Resume.css
+++ b/src/pages/resume/Resume.css
@@ -1,3 +1,7 @@
+.main-resume-container {
+    background-color: #000;
+}
+
 .arrow-image {
     height: 3rem;
 }
@@ -6,7 +10,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #fff;
 }
 
 .resume-image {
