feat(styles): adding new styles to the portfolio

--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,6 +2,16 @@
     background-color: black;
 }
 
+.title-container {
+    display: flex;
+    justify-content: center;
+}
+
+.projects-title {
+    color: #fff;
+    margin-bottom: 3rem;
+}
+
 .cards-container {
     display: flex;
     width: 100%;
