feat(navbar): fixing the navbar on the whole view

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -8,6 +8,8 @@
     background-color: black;
     display: flex;
     position: sticky;
+    top: 0;
+    z-index: 1;
     border-bottom: #fff 1px solid;
     margin-bottom: 3rem;
 }
