--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -14,6 +14,10 @@
     margin-bottom: 3rem;
 }
 
+.navbar-section {
+    font-size: 1.3rem;
+}
+
 .navbar-section:hover {
     color: #fde12d;
 }
@@ -27,7 +31,7 @@
 }
 
 .right-section {
-    margin-right: 4.5rem;
+    margin-right: 5.5rem;
 }
 
 .github-icon,
@@ -46,6 +50,7 @@
 @media (max-width: 990px) {
     .navbar-section {
         width: 10%;
+        font-size: 1rem;
     }
 
     .navbar-expanded {
