--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -4,14 +4,16 @@
 
 .navbar {
     width: 100%;
-    height: 7rem;
     background-color: black;
     display: flex;
     position: sticky;
     top: 0;
     z-index: 1;
-    border-bottom: #fff 1px solid;
     margin-bottom: 3rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
+    height: 7rem;
+    border-bottom: 1px solid #ccc;
 }
 
 .navbar-section {
@@ -26,21 +28,9 @@
     font-size: 2rem;
 }
 
-.left-section {
-    margin-left: 4.5rem;
-}
-
-.right-section {
-    margin-right: 5.5rem;
-}
-
 .github-icon,
 .linkedin-icon {
     margin-left: 1rem;
-}
-
-.left-items {
-    margin-left: 2rem;
 }
 
 .navbar-toggler {
@@ -48,21 +38,19 @@
 }
 
 @media (max-width: 990px) {
+    .left-section {
+        margin-left: 1rem;
+    }
     .navbar-section {
         width: 10%;
         font-size: 1rem;
     }
 
     .navbar-expanded {
-        min-height: 20rem;
-    }
-
-    .responsive-navbar-nav {
-        margin-left: 7rem;
+        min-height: 22rem;
     }
 
     .right-section {
-        margin-left: 3.5rem;
         width: 3%;
     }
 
@@ -72,7 +60,7 @@
     }
 }
 
-@media (max-width: 428px) {
+@media (max-width: 470px) {
     .navbar-expanded {
         min-height: 22rem;
     }
@@ -80,8 +68,5 @@
     .name {
         font-size: 1.5rem;
     }
-
-    .responsive-navbar-nav {
-        margin-left: 5rem;
-    }
 }
+
