--- a/src/pages/aboutme/AboutMe.css
+++ b/src/pages/aboutme/AboutMe.css
@@ -1,12 +1,11 @@
-body {
-    background-color: #000;
+.general-container {
+    height: 100vh;
 }
 
 .arrow-aboutme-container {
     width: 100%;
     display: flex;
     justify-content: flex-start;
-    background-color: #000;
     padding: 1rem 3rem;
 }
 
@@ -16,10 +15,6 @@ body {
 
 .arrow-image {
     height: 3rem;
-}
-
-.general-container {
-    background-color: #000000;
 }
 
 .aboutme-container {
@@ -36,7 +31,6 @@ body {
 }
 
 .aboutme-text {
-    color: #fff;
     width: 59%;
     font-size: 1.5rem;
 }
@@ -54,6 +48,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 5% auto;
+    margin-bottom: 0;
 }
 
 .stack-container img {
@@ -67,6 +62,9 @@ body {
 }
 
 @media screen and (max-width: 1130px) {
+    .general-container {
+        height: 100%;
+    }
     .technologies-list {
         column-count: 3;
     }
@@ -95,3 +93,10 @@ body {
         padding: 0.5rem;
     }
 }
+
+@media screen and (max-width: 300px) {
+    .email-link {
+        font-size: 1rem;
+    }
+}
+
