--- a/src/pages/detailedpages/Detailedpage.css
+++ b/src/pages/detailedpages/Detailedpage.css
@@ -2,7 +2,6 @@
     width: 100%;
     display: flex;
     justify-content: flex-start;
-    background-color: #000;
 }
 
 .arrow-link {
@@ -20,7 +19,6 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-color: #000;
 }
 
 .detailedpage-text {
@@ -28,8 +26,18 @@
     text-align: center;
     margin-bottom: 1rem;
     font-weight: bold;
-    margin-bottom: 2rem;
-    color: #fff;
+    margin-bottom: 1rem;
+}
+
+.button-detailedpage {
+    border-radius: 10px;
+    background-color: rgb(255, 255, 141);
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    border: none;
+    padding: 0.8rem;
+    margin-bottom: 1rem;
 }
 
 .detailedpage-video {
