--- a/src/pages/resume/Resume.css
+++ b/src/pages/resume/Resume.css
@@ -1,5 +1,5 @@
 .main-resume-container {
-    height: 100%;
+    height: 100vh;
     background-color: rgb(255, 255, 141);
 }
 
@@ -7,18 +7,31 @@
     width: 100%;
     height: 5rem;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-items: center;
     background-color: rgb(255, 255, 141);
 }
 
 .arrow-resume-link {
     margin-left: 3rem;
-    margin-top: 1rem;
     width: 5%;
 }
 
 .arrow-resume-image {
     height: 3rem;
+}
+
+.button-download-cv {
+    margin-right: 3rem;
+    border-radius: 10px;
+    background-color: #000;
+    color: #fff;
+    text-decoration: none;
+    padding: 0.5rem;
+}
+
+.button-download-cv:hover {
+    color: #fde12d;
 }
 
 .resume-container {
@@ -43,8 +56,8 @@
 }
 
 @media (max-width: 1024px) {
-    .main-resume-container {
-        height: 100vh;
+    .arrow-resume-link, .button-download-cv {
+        margin: 1rem;
     }
     .resume-image {
         width: 90vw;
@@ -52,3 +65,4 @@
         object-fit: contain;
     }
 }
+
