--- a/src/pages/aboutme/AboutMe.css
+++ b/src/pages/aboutme/AboutMe.css
@@ -17,6 +17,14 @@
     height: 3rem;
 }
 
+.white-arrow {
+    filter: invert(0);
+}
+
+.black-arrow {
+    filter: invert(1);
+}
+
 .aboutme-container {
     display: flex;
     justify-content: center;
