--- a/src/components/intro/IntroSection.css
+++ b/src/components/intro/IntroSection.css
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-.photo-intro {
+.image-intro {
     height: 30%;
     width: auto;
     margin-bottom: 1rem;
@@ -43,7 +43,7 @@
 }
 
 @media (max-width: 650px) {
-    .photo-intro {
+    .image-intro {
         height: 20%;
     }
 }
