--- a/src/pages/aboutme/AboutMe.css
+++ b/src/pages/aboutme/AboutMe.css
@@ -31,7 +31,7 @@
     padding-top: 1rem; 
 }
 
-.cynthia-photo {
+.cynthia-image {
     width: 20%;
     height: 20%;
     object-fit: contain;
@@ -91,7 +91,7 @@
 }
 
 @media screen and (max-width: 700px) {
-    .cynthia-photo {
+    .cynthia-image{
         display: none;
     }
     .technologies-list {
