--- a/src/components/intro/IntroSection.css
+++ b/src/components/intro/IntroSection.css
@@ -1,9 +1,9 @@
 .intro-container {
-    height: 100vh;
+    height: calc(100vh - 7rem);
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
@@ -11,6 +11,7 @@
     height: 30%;
     width: auto;
     margin-bottom: 1rem;
+    border-radius: 50%;
 }
 
 .intro-text {
@@ -48,7 +49,7 @@
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
     .scroll-button {
         padding: 1% 2%; 
         font-size: 1em;
