fix(detailed page): fixing the responsive view in detailed page

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -29,8 +29,12 @@
     text-decoration: none;
 }
 
-.email-link:hover {
+.light-mode .email-link:hover {
     color: #FAA613;
+}
+
+.dark-mode .email-link:hover {
+    color: #fde12d;
 }
 
 .email-dark {
