--- a/src/pages/aboutme/AboutMe.css
+++ b/src/pages/aboutme/AboutMe.css
@@ -72,7 +72,7 @@
 
 @media screen and (max-width: 1130px) {
     .general-container {
-        height: 100%;
+        height: 100vh;
     }
     .technologies-list {
         column-count: 3;
@@ -91,7 +91,10 @@
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
+    .general-container {
+        height: 100%;
+    }
     .cynthia-image{
         display: none;
     }
