--- a/src/pages/resume/Resume.css
+++ b/src/pages/resume/Resume.css
@@ -1,6 +1,7 @@
 .main-resume-container {
     height: 100vh;
     background-color: rgb(255, 255, 141);
+    overflow: hidden;
 }
 
 .arrow-resume-container {
