--- a/src/pages/detailedpages/Detailedpage.css
+++ b/src/pages/detailedpages/Detailedpage.css
@@ -35,7 +35,7 @@
     text-align: center;
     margin-bottom: 1rem;
     font-weight: bold;
-    font-size: 1.3rem;
+    font-size: 1rem;
     margin-bottom: 1rem;
 }
 
@@ -44,7 +44,7 @@
     background-color: rgb(255, 255, 141);
     color: #000;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 0.8rem;
     text-decoration: none;
     border: none;
     padding: 1rem;
@@ -54,6 +54,7 @@
 .detailedpage-video {
     width: 90%;    
     height: auto;
+    object-fit: contain;
     border: 10px solid white; 
 }
 
@@ -69,7 +70,7 @@
     }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1024px) {
     .detailedpage-video {
         width: 50%; 
     }
