fix(scroll): fixing scrollToProjects function

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,7 +3,14 @@
     display: flex;
     align-items: center;
     background-color: #000;
-    border-top: #fff 5px solid;
+}
+
+.light-mode .footer {
+    border-top: #000 3px solid;
+}
+
+.dark-mode .footer {
+    border-top: #fff 3px solid;
 }
 
 .footer-content {
