--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -34,6 +34,7 @@
     align-items: center;
     opacity: 0;
     transition: opacity 0.3s;
+    border-radius: 5px;
     background-color: rgb(255, 255, 141);
 }
 
