--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -61,7 +61,7 @@
 }
 
 .light-mode button.navbar-toggler {
-    background-color: #4E8098;
+    background-color: rgb(54, 84, 134);
 }
 
 .dark-mode button.navbar-toggler {
