--- a/src/components/circleAnimation/CircleAnimation.css
+++ b/src/components/circleAnimation/CircleAnimation.css
@@ -2,9 +2,9 @@
     height: 50px;
     width: 50px;
     position: fixed;
-    background: #fff;
     border-radius: 50%;
     z-index: 1;
+    background-color: #9BA7C0;
     pointer-events: none;
     transition: transform 0.3s ease;
 }
