--- a/src/components/intro/IntroSection.css
+++ b/src/components/intro/IntroSection.css
@@ -1,5 +1,5 @@
 .intro-container {
-    height: calc(100vh - 7rem);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
