--- a/src/components/circleAnimation/CircleAnimation.css
+++ b/src/components/circleAnimation/CircleAnimation.css
@@ -4,9 +4,16 @@
     position: fixed;
     border-radius: 50%;
     z-index: 1;
-    background-color: #9BA7C0;
     pointer-events: none;
     transition: transform 0.3s ease;
+}
+
+#circle.light-mode {
+    background-color: #9BA7C0;
+}
+
+#circle.dark-mode {
+    background-color: #fff;
 }
 
 @media only screen and (max-width: 1024px) {
